# waitlist_email_retriever

./: .gitignore  .rusty-hook.toml  Cargo.toml  README.md  TODO.md
src/: email_client.rs  email_extractor.rs  io_manager.rs  main.rs  notion_client.rs  sheets_client.rs  utils.rs
