[package]
name = "waitlist_email_retriever"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
envy = "0.4.2"
imap = "2.4.1"
native-tls = "0.2.11"
regex = "1.10.3"
reqwest = { version = "0.11.26", features = ["blocking", "json"] }
serde_json = "1.0.114"
tokio = { version = "1", features = ["full"] }


