[package]
name = "waitlist_email_retriever"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
clap = { version = "4.5.3", features = ["derive"] }
envy = "0.4.2"
google-sheets4 = "5.0.4"
imap = "2.4.1"
native-tls = "0.2.11"
regex = "1.10.3"
reqwest = { version = "0.11.26", features = ["blocking", "json"] }
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1", features = ["full"] }
yup-oauth2 = "8.3.2"

[dev-dependencies]
rusty-hook = "^0.11.2"
